FA brought to version 4.7.  Icon shift corrected

--- a/WebApp/Resources/Css/ts.ui.css
+++ b/WebApp/Resources/Css/ts.ui.css
@@ -417,7 +417,15 @@ div.jGrowl-message { max-height: 68px; overflow:hidden;}
     border-width: 1px; border-style: solid;border-color: #999999;
 }
 
+.associations > i {
+    color:#95A0AB;
+    margin:0px 12px 0px 0px;
+}
 
+.associations > i:hover {
+    color:#2A3F54;
+    cursor: pointer;
+}
 
 
 
